Updated account managment to integrage user account with enrolments

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -6,15 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-    "FeatureManagement": {
-        "ManageUserPermissions": false,
-        "RemoveUsers": false,
-        "ShowLanguageSwitcher": false,
-        "ManageUserDetailChanges": false,
-        "ManageCompanyDetailChanges": true,
-        "ShowSessionTimeoutWarning": false,
-        "ShowYourFeedbackFooter": false
-    },
+  "FeatureManagement": {
+    "ManageUserPermissions": false,
+    "RemoveUsers": false,
+    "ShowLanguageSwitcher": false,
+    "ManageUserDetailChanges": false,
+    "ManageCompanyDetailChanges": true,
+    "ShowSessionTimeoutWarning": false,
+    "ShowYourFeedbackFooter": false
+  },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
     "ForwardedHostHeaderName": "X-Original-Host",
@@ -100,10 +100,10 @@
   },
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
-    "FacadeUserAccountEndpoint": "user-accounts",
-    "FacadeUserAccountV1Endpoint": "v1/user-accounts",
+    "FacadeUserAccountEndpoint": "v1/user-accounts",
     "FacadeDownStreamScope": "",
     "ServiceKey": "",
-    "SignInRedirect": ""
+    "SignInRedirect": "",
+    "SelectOrganisationRedirect": ""
   }
 }
