--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -88,7 +88,7 @@
     "CallbackPath": "/signin-oidc"
   },
   "FacadeAPI": {
-    "Address": "",
+    "Address": "https://devrwdwebwaa404.azurewebsites.net/",
     "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
     "TimeoutSeconds": 10,
     "GetServiceRolesPath": "roles",
@@ -96,7 +96,8 @@
     "GetUserAccountV1Path": "v1/user-accounts",
     "GetCompanyFromCompaniesHousePath": "/api/companies-house",
     "PutUserDetailsByUserIdPath": "user-accounts/personal-details",
-    "PutUpdateOrganisationPath": "organisations/organisation"
+    "PutUpdateOrganisationPath": "organisations/organisation",
+    "GetPersonsAPIPath": "api/persons"
   },
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
