Update ViewDetails layout

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -89,7 +89,7 @@
   },
   "FacadeAPI": {
     "Address": "https://devrwdwebwaa404.azurewebsites.net/",
-    "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
+    "DownstreamScope": "https://AZDCUSPOC2.onmicrosoft.com/epr-dev-producers-account-facade/account-creation",
     "TimeoutSeconds": 10,
     "GetServiceRolesPath": "roles",
     "GetUserAccountPath": "user-accounts",
