updated the remove stuff

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -68,7 +68,8 @@
     "FrontEndCreationBaseUrl": "/create-account",
     "PrivacyLink": "/report-data/privacy",
     "CookiesLink": "/report-data/cookies",
-    "CompanyHouseChangeRequestLink": "https://www.gov.uk/file-changes-to-a-company-with-companies-house"
+    "CompanyHouseChangeRequestLink": "https://www.gov.uk/file-changes-to-a-company-with-companies-house",
+    "EprPrnManageOrganisationLink": "https://localhost:7068/epr-prn/manage-organisation"
   },
   "EmailAddresses": {
     "DataProtection": "data.protection@defra.gov.uk",
