Feature /567263 view details (#216)
* initial checkin

* ViewDetails changes

* update add user integration

* fixed merges

* fixed merges

* fixed remove user

* Update ViewDetails layout

* added new endpoint for remove user

* Test comment

* Clean up commented code

* updated the remove stuff

* update unit tests

* Remove user bug fixing

* PR fix

* PR fix url

* Updated as per PR Comments

* fixed broken tests

* fixed PR comments

---------

Co-authored-by: Harish Paladugu <harish.paladugu@Defra.onmicrosoft.com>
Co-authored-by: Saywa Singh Boparai <saywa.boparai@defra.onmicrosoft.com>

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -68,7 +68,8 @@
     "FrontEndCreationBaseUrl": "/create-account",
     "PrivacyLink": "/report-data/privacy",
     "CookiesLink": "/report-data/cookies",
-    "CompanyHouseChangeRequestLink": "https://www.gov.uk/file-changes-to-a-company-with-companies-house"
+    "CompanyHouseChangeRequestLink": "https://www.gov.uk/file-changes-to-a-company-with-companies-house",
+    "EprPrnManageOrganisationLink": "/epr-prn/manage-organisation#team"
   },
   "EmailAddresses": {
     "DataProtection": "data.protection@defra.gov.uk",
@@ -88,7 +89,7 @@
     "CallbackPath": "/signin-oidc"
   },
   "FacadeAPI": {
-    "Address": "",
+    "Address": "https://devrwdwebwaa404.azurewebsites.net/",
     "DownstreamScope": "https://eprb2cdev.onmicrosoft.com/account-creation-facade/account-creation",
     "TimeoutSeconds": 10,
     "GetServiceRolesPath": "roles",
@@ -96,7 +97,8 @@
     "GetUserAccountV1Path": "v1/user-accounts",
     "GetCompanyFromCompaniesHousePath": "/api/companies-house",
     "PutUserDetailsByUserIdPath": "user-accounts/personal-details",
-    "PutUpdateOrganisationPath": "organisations/organisation"
+    "PutUpdateOrganisationPath": "organisations/organisation",
+    "GetPersonsAPIPath": "api/persons"
   },
   "EprAuthorizationConfig": {
     "FacadeBaseUrl": "",
