Added custom back link method to ReEx account management email action

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -69,7 +69,7 @@
     "PrivacyLink": "/report-data/privacy",
     "CookiesLink": "/report-data/cookies",
     "CompanyHouseChangeRequestLink": "https://www.gov.uk/file-changes-to-a-company-with-companies-house",
-    "EprPrnManageOrganisationLink": "/epr-prn/manage-organisation#team"
+    "ReExLandingPageUrl": "/epr-prn/manage-organisation#team"
   },
   "EmailAddresses": {
     "DataProtection": "data.protection@defra.gov.uk",
