--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -1,1 +1,2 @@
+aad21c1474474506de25260cc397b218bc18f87f:src/FrontendAccountManagement.Web/appsettings.development.json:generic-api-key:20
 dcb00f644dbbf9b7d0f21d077a87ad1d7bb0d45e:src/FrontendAccountManagement.Web/appsettings.development.json:generic-api-key:20
