Fixed code smells

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -65,6 +65,8 @@
     "PrivacyDataProtectionPublicRegister": "https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/individual-rights/individual-rights",
     "PrivacyDefrasPersonalInformationCharter": "https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs/about/personal-information-charter",
     "PrivacyInformationCommissioner": "https://ico.org.uk/make-a-complaint",
+    "PrivacyProducerPackagingPrivacy": "https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-privacy-policy",
+    "PrivacyProducerPackagingAccessibility": "https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-accessibility-statement",
     "FrontEndCreationBaseUrl": "/create-account",
     "PrivacyLink": "/report-data/privacy",
     "CookiesLink": "/report-data/cookies",
