Unit test coverage fix

--- a/src/FrontendAccountManagement.IntegrationTests/FrontendAccountManagement.IntegrationTests.csproj
+++ b/src/FrontendAccountManagement.IntegrationTests/FrontendAccountManagement.IntegrationTests.csproj
@@ -10,6 +10,7 @@
     <PropertyGroup>
         <!-- SonarCloud does not recognise file-scoped namespaces in current version. -->
         <NoWarn>S3903</NoWarn>
+        <RunSettingsFilePath>C:\Users\a938767\Source\Repos\epr-frontend-accountmanagement-microservice\src\FrontendAccountManagement.IntegrationTests\bin\Debug\net8.0\fine-code-coverage\coverage-tool-output\FrontendAccountManagement.IntegrationTests-fcc-mscodecoverage-generated.runsettings</RunSettingsFilePath>
     </PropertyGroup>
 
     <ItemGroup>
