Initial work to remove users from B2C via Graph API

--- a/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
+++ b/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPR.Common.Authorization" Version="1.0.17" />
+    <PackageReference Include="EPR.Common.Authorization" Version="1.0.19-rc.1037955" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.44" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
