--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -6,15 +6,16 @@
     }
   },
   "AllowedHosts": "*",
-    "FeatureManagement": {
-        "ManageUserPermissions": false,
-        "RemoveUsers": false,
-        "ShowLanguageSwitcher": false,
-        "ManageUserDetailChanges": false,
-        "ManageCompanyDetailChanges": true,
-        "ShowSessionTimeoutWarning": false,
-        "ShowYourFeedbackFooter": false
-    },
+  "FeatureManagement": {
+    "ManageUserPermissions": false,
+    "RemoveUsers": false,
+    "ShowLanguageSwitcher": false,
+    "ManageUserDetailChanges": false,
+    "ManageCompanyDetailChanges": true,
+    "ShowSessionTimeoutWarning": false,
+    "ShowYourFeedbackFooter": false,
+    "UseGraphApiForExtendedUserClaims": false
+  },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
     "ForwardedHostHeaderName": "X-Original-Host",
