Remove org ids via Graph API for removed users AB#607760  (#221)
* Initial work to remove users from B2C via Graph API

* Use graph api to remove orgIds claim when user is removed

* Improve tests and fix sonarqube issues

* Update EPR.Common.Authorization to new version 1.0.20

---------

Co-authored-by: Mike Wild <Michael.Wild@defra.onmicrosoft.com>
# Conflicts:
#	src/FrontendAccountManagement.Web/Configs/FeatureFlags.cs
#	src/FrontendAccountManagement.Web/appsettings.json

--- a/src/FrontendAccountManagement.Web/appsettings.json
+++ b/src/FrontendAccountManagement.Web/appsettings.json
@@ -12,7 +12,8 @@
     "ShowLanguageSwitcher": false,
     "ManageUserDetailChanges": false,
     "ManageCompanyDetailChanges": true,
-    "ShowSessionTimeoutWarning": false
+    "ShowSessionTimeoutWarning": false,
+    "UseGraphApiForExtendedUserClaims": false
   },
   "PATH_BASE": "/manage-account",
   "ForwardedHeaders": {
