--- a/pipelines/ci_pipeline.yaml
+++ b/pipelines/ci_pipeline.yaml
@@ -6,23 +6,6 @@ trigger:
     include:
       - 'src/*'
 
-parameters:
-- name: runTests
-  displayName: Run tests
-  type: boolean
-  default: true
-- name: runOWASPScan
-  displayName: Run OWASP Scan
-  type: boolean
-  default: true
-- name: sonarqubeInstance
-  displayName: 'Select SonarQube for v9.9 or SonarQubeLatest for 10.4'
-  type: string
-  default: 'SonarQubeLatest'
-  values:
-  - 'SonarQube'
-  - 'SonarQubeLatest'
-
 pool: DEFRA-COMMON-ubuntu2004-SSV3
 
 variables:
@@ -38,6 +21,8 @@ variables:
   - name: sonarQubeProjectName
     value: frontend-accountmanagement-microservice
   - name: runNugetTasks
+    value: true
+  - name: runTests
     value: true
   - name: dotnetVersion
     value: dotnetVersion8
@@ -62,15 +47,13 @@ stages:
     testProjectFolder: ${{ variables.testProjectFolder }}
     sonarQubeProjectKey: ${{ variables.sonarQubeProjectKey }}
     sonarQubeProjectName: ${{ variables.sonarQubeProjectName }}
-    runTests: ${{parameters.runTests}}
-    runOWASPScan: ${{ parameters.runOWASPScan }}
+    runTests: ${{variables.runTests}}
     azureSubscription: $(azureSubscription)
     acrAzureContainerRegistryName: $(acr.azureContainerRegistryName)
     acrRepositoryName: $(acr.repositoryName)
     branchName: ${{ replace(replace(variables['Build.SourceBranch'], 'refs/heads/', ''), '/', '_') }}
     runNugetTasks: ${{ variables.runNugetTasks }}
     serviceName: $(serviceName)
-    sonarqubeInstance: ${{ parameters.sonarqubeInstance }}
     dotnetVersion: ${{ variables.dotnetVersion }}
 
 - template: templates/stage-deploy-template.yaml
