--- a/src/FrontendAccountManagement.Core.UnitTests/FrontendAccountManagement.Core.UnitTests.csproj
+++ b/src/FrontendAccountManagement.Core.UnitTests/FrontendAccountManagement.Core.UnitTests.csproj
@@ -13,22 +13,24 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="6.12.0" />
-        <PackageReference Include="ILogger.Moq" Version="1.1.10" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
-        <PackageReference Include="Moq" Version="4.20.70" />
-        <PackageReference Include="MSTest.TestAdapter" Version="3.5.2" />
-        <PackageReference Include="MSTest.TestFramework" Version="3.5.2" />
-        <PackageReference Include="coverlet.collector" Version="6.0.2">
+        <PackageReference Include="FluentAssertions" Version="7.2.0" />
+        <PackageReference Include="ILogger.Moq" Version="2.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+        <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="MSTest.TestAdapter" Version="3.10.4" />
+        <PackageReference Include="MSTest.TestFramework" Version="3.10.4" />
+        <PackageReference Include="coverlet.collector" Version="6.0.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+        <PackageReference Include="coverlet.msbuild" Version="6.0.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
-        <PackageReference Update="SonarAnalyzer.CSharp" Version="9.32.0.97167" />
+        <PackageReference Include="System.Text.Json" Version="8.0.6" />
+        <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+        <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
     </ItemGroup>
 
     <ItemGroup>
