--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -22,22 +22,23 @@
   </Target>
   
     <ItemGroup>
-      <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
+      <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="8.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.8" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
-      <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="3.5.0" />
-      <PackageReference Include="Microsoft.Graph" Version="5.85.0" />
+      <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.3.0" />
+      <PackageReference Include="Microsoft.Graph" Version="5.93.0" />
       <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
       <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.1.0" />
-      <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
+      <PackageReference Include="System.Text.Json" Version="8.0.6" />
+      <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
       <PackageReference Update="SonarAnalyzer.CSharp" Version="9.30.0.95878" />
       <PackageReference Include="EPR.Common.Authorization" Version="1.0.21" />
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.8" />
-      <PackageReference Update="SonarAnalyzer.CSharp" Version="9.32.0.97167" />
+      <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
     </ItemGroup>
 
     <ItemGroup>
