Revert "Updated govuk-frontend to 5.11.1 (#225)"
This reverts commit 8926758d5b005134fbdc049caf6d61b46ef5a59f.

--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -20,6 +20,10 @@
   <Target Name="NpmRunBuildFrontend" DependsOnTargets="NpmInstall" BeforeTargets="BeforeBuild">
     <Exec Command="npm run build-frontend" />
   </Target>
+
+    <ItemGroup>
+      <Folder Include="assets\js" />
+    </ItemGroup>
   
     <ItemGroup>
       <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
