--- a/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
+++ b/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPR.Common.Authorization" Version="1.0.21-rc.1062542" />
+    <PackageReference Include="EPR.Common.Authorization" Version="1.0.22" />
     <PackageReference Include="libphonenumber-csharp" Version="9.0.15" />
 	<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
